Fixed a bug in the jumpto function and improved css

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 ol, ul {
-  padding-left: 30px;
+  padding-left: 0px;
 }
 
 .board-row:after {
